<resources>
    <string name="app_name">Med-Manager</string>
    <string name="action_signup">SignUp</string>
    <string name="action_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="description_background_image">Background Image</string>
    <string name="description_company_logo">Company Logo</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="title_activity_navigation">NavigationActivity</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_display_medicine">DisplayMedicineActivity</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="date_format">yyyy-mm-dd</string>
    <string name="name_label">Name</string>
    <string name="description_label">Description</string>
    <string name="frequency_label">Frequency</string>
    <string name="frequency_hint">After how many hours</string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="company_logo_description">Company Logo</string>
    <string name="time_in_hrs_label">Hrs</string>
    <string name="after_label">After</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_action_settings">Settings</string>
    <string name="action_insert_menu">Insert</string>
    <string name="frequency_after_label">After</string>
    <string name="frequency_hours">Hours</string>
    <string name="action_add_medicine">Add Medicine</string>
    <string name="medicine_details_activity">Medicine Details</string>
    <string name="medicine_activity">Medicines</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_activity">Profile</string>
    <string name="activity_profile">Profile</string>
    <string name="main_notification_channel_name">Primary</string>
    <string name="medicine_notification_title">Diclofenac</string>
    <string name="medicine_notification_body">Kindly take your Medication</string>
    <string name="reminder_title">Medicine Reminder</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="edit_profile_label">Enter your name</string>
    <string name="new_profile_name_hint">New Profile Name</string>
</resources>
