<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/menu_title_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:title="@string/activity_profile"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="1"
        android:title="@string/sign_out"
        app:showAsAction="never"
        />

</menu>