<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_medicine_display_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:text="@string/name_label"
                    android:width="110dp"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/text_medicine_display_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Diclofenac 50mg tablet"
                    android:textSize="20sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_medicine_display_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:text="@string/description_label"
                    android:width="110dp"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/text_medicine_display_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Diclofenac 50mg tablet"
                    android:textSize="20sp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/text_medicine_display_frequency_label"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:text="@string/frequency_label"
                    android:width="110dp"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:paddingLeft="5dp"
                        android:id="@+id/text_medicine_display_frequency_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/after_label"
                        android:layout_marginRight="3dp"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/text_medicine_display_frequency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3"
                        android:textSize="20sp" />

                    <TextView
                        android:paddingLeft="5dp"
                        android:id="@+id/text_medicine_display_frequency_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frequency_hours"
                        android:textSize="20sp"
                        android:layout_toRightOf="@+id/text_medicine_display_frequency"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>